--- a/AUTHORS
+++ b/AUTHORS
@@ -3,17 +3,18 @@ The authors of Zile:
 * Sandro Sigala <sandro@sigala.it> conceived and wrote Zile
   single-handed up to version 1.6.1.
 
-* Reuben Thomas <rrt@sc3d.org> joined the project at version 1.6.1,
-  and has been responsible for maintenance and releases since then,
-  fixing bugs and adding a few features along the way, and translated
-  Zile into Lua.
+* Scott Lawrence <yorgle@gmail.com> wrote the "lithp" interpreter
+  which was used as the basis for the tiny Lisp interpreter in C Zile.
+
+* Reuben Thomas <rrt@sc3d.org> maintained C Zile from version 1.6.1,
+  to version 2.4.9, and translated the code from C that formed the
+  foundation of Lua Zile.
 
 * David A. Capello <dacap@users.sourceforge.net> contributed to Zile
   from version 1.7 to 2.0, adding many new features such as regex
   search.
 
-* Scott Lawrence <yorgle@gmail.com> wrote the "lithp" interpreter
-  which was used as the basis for the tiny Lisp interpreter.
-
-* Gary V. Vaughan <gary@gnu.org> made the build system non-recursive
-  and did a lot of work on the Lua version.
+* Gary V. Vaughan <gary@gnu.org> began work on Lua Zile just before
+  C Zile 2.4.0 was released; took over maintenance as C Zile was
+  moth-balled after 2.4.9; and moved Lua Zile into the new "Zile
+  Implements Lua Editors" era.
