--- a/NEWS
+++ b/NEWS
@@ -41,6 +41,12 @@ GNU Zile NEWS                                    -*- outline -*-
   - Support for FAQ, COPYING and NEWS browsing in editor with \C-h\C-f,
     \C-h\C-c and \C-h\C-n (or F1 prefix equivalents).
 
+** Bug fixes
+
+ - zmacs 'universal-argument' guards against non-ASCII keys, so you
+   can execute a key sequences like "\M-35\RIGHT" without inducing a
+   "char out of range" crash.
+
 
 * Noteworthy changes in release 3 (2013-09-25) [alpha]
 
