zmacs: upgrade shell-command-on-region to match Emacs 24.
* tests/shell-command-on-region-2.el: New test for Emacs 24
four argument semantics.
* tests/shell-command-on-region-2.output: Expected output.
* tests/shell-command-on-region.el: The fourth 't' argument now
means 'output to the current buffer', and we need a new fifth
't' argument to specify replacement of the region.
* lib/zile/buffer.lua (replace_estr, warn_if_readonly_buffer)
(warn_if_no_mark, calculate_the_region, goto_offset): Add an
optional final bp parameter to override default use of current
buffer.
* lib/zile/funcs.lua (pipe_command): Reflect Emacs 24 semantics
by taking output parameter to specify output-buffer, and new
input parameter containing optional command input string.
* lib/zmacs/zlisp/edit.zl (shell-command, shell-command-on-region):
Improve docstrings in line with changes to Emacs 24, and simplify
implementation around improved pipe_command.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,12 @@ GNU Zile NEWS                                    -*- outline -*-
     implementation.  There is no 'zile' executable any more, it has
     been superseded by 'zmacs'.
 
+  - Zlisp now uses a more Emacs-24-like 'shell-command-on-region'
+    implementation, where the replace parameter is now the fifth
+    argument (rather than the fourth), and adds a new fourth parameter
+    which can specify an output buffer other than only current buffer
+    or temporary '*Shell Command Output*' buffer.
+
 ** New features
 
 *** Build-related
