--- a/NEWS
+++ b/NEWS
@@ -47,8 +47,8 @@ GNU Zile NEWS                                    -*- outline -*-
   - Support for FAQ, COPYING and NEWS browsing in editor with \C-h\C-f,
     \C-h\C-c and \C-h\C-n (or F1 prefix equivalents).
 
-  - `describe-function' now shows function signatures in displayed
-    help text.
+  - `describe-function` now shows bound keys and function signatures
+    in displayed help text.
 
 *** Zz
 
