zmacs: support message-log-max for *Messages* trimming.
* lib/zmacs/zlisp/minibuf.zl (message-log-max): Declare a new
variable for the maximum number of messages to keep in the
*Messages* buffer.
* lib/zile/minibuf.lua (minibuf_echo): Only add messages if
`message-log-max` is non-nil, and if it is a number then delete
the oldest messages until no more than that number remain.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -56,7 +56,9 @@ GNU Zile NEWS                                    -*- outline -*-
   - `describe-function` now shows bound keys and function signatures
     in displayed help text.
 
-  - New `*Messages*` buffer accumulates minibuf messages.
+  - New `*Messages*` buffer accumulates minibuf messages.  Maximum
+    number of retained messages is limited according to new variable,
+    `message-log-max`.  \C-h v message-log-max RET for details.
 
 *** Zz
 
