zmacs: show buffer-local details in describe-variable output.
* lib/zmacs/zlisp/help.zl (write_variable_description): If this
is a buffer-local variable, output a notice to that effect.  If
it has a different local value to the original default, also show
the original value.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -56,6 +56,9 @@ GNU Zile NEWS                                    -*- outline -*-
   - `describe-function` now shows bound keys and function signatures
     in displayed help text.
 
+  - `describe-variable` now shows original values and notification for
+    buffer-local variables.
+
   - New `*Messages*` buffer accumulates minibuf messages.  Maximum
     number of retained messages is limited according to new variable,
     `message-log-max`.  \C-h v message-log-max RET for details.
