zlisp: a fully functional reader and evaluator!
* lib/zile/zlisp.lua (parse): When pushing a quoted node onto
the AST, it goes at the front of the cons list!
* lib/zmacs/eval.lua (marshaller): Except for special forms, now
marked with "UNEVAL" in defsubr max parameter, evaluate each
parameter before calling the subr.
(eval_expression): Rewrite. Get values of variable symbols, call
function symbols at the head of a cons list, and handle `quote`
specially until special-forms support is complete.
* lib/zmacs/zlisp/variables.zl (set-variable): No need to tease
out the variable symbol from a quoted cons list any more.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -65,6 +65,10 @@ GNU Zile NEWS                                    -*- outline -*-
 
 *** Zlisp
 
+  - Now has a fully functional reader and evaluator so that, for
+    example, calling functions with arguments that are themselves
+    function calls or variables works as expected.
+
   - Support for `point` and `mark`.  \C-h f ... RET for details.
 
 *** Zz
