zlisp: add proper (point) and (mark) support.
* lib/zmacs/zlisp/buffer.zl (point): New function. Returns the
byte offset of point in the current buffer.
* lib/zmacs/zlisp/marker.zl (mark): New function. Returs the
byte offset of mark in the current buffer, if any.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -63,6 +63,10 @@ GNU Zile NEWS                                    -*- outline -*-
     number of retained messages is limited according to new variable,
     `message-log-max`.  \C-h v message-log-max RET for details.
 
+*** Zlisp
+
+  - Support for `point` and `mark`.  \C-h f ... RET for details.
+
 *** Zz
 
   - A new editor, currently heavily based on Zmacs, but with the zlisp
