zlisp: copy-region-as-kill now interprets parameters.
* lib/zmacs/zlisp/buffer.zl (point-min, point-max, buffer-size):
New lisp functions.
* lib/zmacs/zlisp/killring.zl (copy-region-as-kill): Interpret
arguments as describing region offsets.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -69,7 +69,12 @@ GNU Zile NEWS                                    -*- outline -*-
     example, calling functions with arguments that are themselves
     function calls or variables works as expected.
 
-  - Support for `point` and `mark`.  \C-h f ... RET for details.
+  - `copy-region-as-kill` understands it's parameters now, and copies
+    the described region correctly.
+
+  - New functions: `buffer-size`, `mark`, `point`, `point-max`,
+    `point-min`.
+    \C-h f ... RET for details.
 
 *** Zz
 
