zlisp: save-buffers-kill-emacs saves without prompting with ARG.
* lib/zile/file.lua (save_some_buffers): New `noask` parameter.
* lib/zmacs/zlisp/file.zl (save-buffers-kill-emacs): Accept an
optional prefix arg, and pass to `save_some_buffers`.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -72,6 +72,9 @@ GNU Zile NEWS                                    -*- outline -*-
   - `copy-region-as-kill` understands it's parameters now, and copies
     the described region correctly.
 
+  - `save-buffers-kill-emacs` accepts an optional prefix argument; when
+    non-nil save all modified buffers without asking.
+
   - New functions: `buffer-size`, `mark`, `point`, `point-max`,
     `point-min`.
     \C-h f ... RET for details.
