doc: keep config.ld out of doc/ for LuaRocks docdir install.
* doc/config.ld: Move from here...
* build-aux/config.ld: ...to here.
* local.mk ($(dist_doc_DATA): Adjust.
* .gitignore: Update.
* NEWS: Update.

Signed-off-by: Gary V. Vaughan <gary@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -42,6 +42,8 @@ GNU Zile NEWS                                    -*- outline -*-
     means the lua source rock installs directly by copying files into
     the rocks tree.
 
+  - LuaRocks install doesn't copy config.ld to $docdir.
+
 *** Zmacs
 
   - Support for FAQ, COPYING and NEWS browsing in editor with \C-h\C-f,
