--- a/NEWS
+++ b/NEWS
@@ -10,9 +10,15 @@ GNU Zile NEWS                                         -*- outline -*-
   Fix speed of search on large buffers (previously, the entire buffer
   was copied for each search). The fix was copied from Zee.
 
+  Make query-replace and save file prompt handling closer to Emacs.
+
 ** Build-related
 
   Use pkgconfig to find libgc.
+
+** Miscellaneous
+
+  Some code clean-up.
 
 
 * Noteworthy changes in release 2.4.9 (2012-10-01) [stable]
