--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 GNU Zile NEWS                                         -*- outline -*-
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
+
 * Noteworthy changes in release 2.4.10 (2014-02-25) [stable]
 
 ** Bug fixes
