--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU Zile NEWS                                         -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2.4.11 (2014-02-26) [stable]
 
 ** Bug fixes
 
